fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -732,6 +732,10 @@ textarea {
 	color: #ccc;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.5em 1em 0 0;
 	padding: 0;
